# server/src/main/java/io/vaultdatum/server/sync/ManifestNotFoundException.java
@@ -1,0 +1,8 @@
+package io.vaultdatum.server.sync;
+
+public final class ManifestNotFoundException extends RuntimeException {
+
+    public ManifestNotFoundException(String manifestId) {
+        super("Manifest was not found: " + manifestId);
+    }
+}
